--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
       ADMIN_USERNAMES: ${ADMIN_USERNAMES}
+    ports:
+      - 8081:8081
     volumes:
       - .:/app
     restart: always
